<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.angryscarf.gamenews.LoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@color/colorBackgroundDark"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="48sp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryText"
        android:alpha="0.7"

        android:text="@string/login_banner"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="14sp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryText"
        android:alpha="0.4"

        android:text="@string/login_sub_banner"
        />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/login_edit_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:inputType="text"
        android:textColor="@color/colorPrimaryText"
        android:textColorHint="@color/colorPrimaryText"
        android:backgroundTint="@color/colorSecondary"
        android:hint="@string/login_username_hint"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/login_edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"

        android:textColor="@color/colorPrimaryText"
        android:textColorHint="@color/colorPrimaryText"
        android:backgroundTint="@color/colorSecondary"

        android:layout_marginTop="16dp"
        android:hint="@string/login_password_hint"/>

    <Button
        android:id="@+id/login_button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"

        android:textStyle="bold"
        android:background="@color/colorSecondaryDark"
        android:textColor="@color/colorSecondaryText"


        android:text="@string/login_button"/>
</LinearLayout>
